--- a/backend/src/main/webapp/app/views/war_file/main.html
+++ b/backend/src/main/webapp/app/views/war_file/main.html
@@ -144,8 +144,9 @@
 									<td>{{ data.fileName }}</td>
 									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td>
-										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
-										<i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>&emsp;
+										<i title="Delete" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
+										<i title="Download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>&emsp;
+										<i title="Deploy" class="fa fa-plane fa-lg user-action-icon-primary" ng-click="deploy(data.id)"></i>
 									</td>
 								</tr>
 							</tbody>
