--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -61,7 +61,7 @@
 						<div class="input-group input-daterange">
 							<input name="phoneNumber" class="form-control" ng-model="user.phoneNumber" style="text-align: left;">
 						    <span class="input-group-addon">ext.</span>
-						    <input name="phoneExt" class="form-control" ng-model="user.phoneExt">
+						    <input name="phoneExt" class="form-control" ng-model="user.phoneExt" style="width: 80px;">
 						</div>
 					</div>
 					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
