--- a/backend/src/main/webapp/app/views/profile/main.html
+++ b/backend/src/main/webapp/app/views/profile/main.html
@@ -76,7 +76,7 @@
 										<div class="input-group input-daterange">
 											<input name="phoneNumber" class="form-control" ng-model="data.phoneNumber" style="text-align: left;">
 										    <span class="input-group-addon">ext.</span>
-										    <input name="phoneExt" class="form-control" ng-model="data.phoneExt">
+										    <input name="phoneExt" class="form-control" ng-model="data.phoneExt" style="width: 80px;">
 										</div>
 									</div>
 									
