--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -8,7 +8,7 @@
 <div class="panel panel-primary">
 	<div class="panel-heading">
 		<i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
-        <div class="btn-group pull-right" ng-show="group0">
+        <!-- <div class="btn-group pull-right" ng-show="group0">
 	        <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 	         	<i class="fa fa-chevron-down"></i>
 	        </button>
@@ -16,7 +16,7 @@
 				<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 			</ul>
      	</div>
-     	<span class="pull-right" ng-show="group0">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
+     	<span class="pull-right" ng-show="group0">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
      </div>
 	<div class="panel-body" style="padding: 3px;">
           	
