--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -10,7 +10,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
-					<div class="btn-group pull-right" ng-show="group0 && !isDetailPage">
+					<!-- <div class="btn-group pull-right" ng-show="group0 && !isDetailPage">
 						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 							<i class="fa fa-chevron-down"></i>
 						</button>
@@ -18,7 +18,7 @@
 							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
 						</ul>			
 					</div>
-					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
+					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
 					<button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isDetailPage">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
