--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -12,7 +12,7 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> ผลการติดตาม
-                    <div class="btn-group pull-right" ng-show="group0 || group5">
+                    <!-- <div class="btn-group pull-right" ng-show="group0 || group5">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
 			            	<i class="fa fa-chevron-down"></i>
 			            </button>
@@ -22,7 +22,7 @@
 			                </li>
 			            </ul>
 			        </div>
-			        <span class="pull-right" ng-show="group0 || group5">{{ workingOnProduct.productName }}&nbsp&nbsp</span>
+			        <span class="pull-right" ng-show="group0 || group5">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
