--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -11,12 +11,12 @@
 		  </div>
 		  <div class="form-group" ng-show="group0 || group5">
 			<select name="products" class="form-control" ng-model="$parent.formData.product" ng-options="option.id as option.productName for option in productsSelect" ng-change="search()">
-				<option value="">---เลือกโปรดักส์---</option>
+				<option value="">---ทั้งหมด---</option>
 		  	</select>
 		  </div>
 		  <div class="form-group">
 			<select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
-				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+				<option value="">---{{'user.addpage.dropdown_role_msg' | translate}}---</option>
 			    <option ng-selected="{{ $parent.formData.role == option.authority }}"
 			    		ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 			</select>
