--- a/backend/src/main/webapp/app/views/deployer_file/main.html
+++ b/backend/src/main/webapp/app/views/deployer_file/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Upload WAR File</h1>
+			<h1 class="page-header">Deployer File</h1>
 		</div>
 	</div>
 	
@@ -10,30 +10,14 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
-					<!-- <div class="btn-group pull-right" ng-show="group0 && !isDetailPage">
-						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-							<i class="fa fa-chevron-down"></i>
-						</button>
-						<ul class="dropdown-menu slidedown">
-							<li ng-repeat="u in products"><a href="" ng-click="changeProduct(u)">{{ u.productName }}</a></li>
-						</ul>			
-					</div>
-					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
 					<button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isDetailPage">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 
-                	
-                	
                 	<div class="panel panel-info" style="margin: 0;">
-						<div class="panel-heading" nv-file-drop="" uploader="uploader">
-					
-					
-							<!-- <h3>Upload queue</h3>
-					                  <p>Queue length: {{ uploader.queue.length }}</p> -->
-					
+						<div class="panel-heading" nv-file-drop="" uploader="uploader">		
 							<table class="table">
 								<thead>
 									<tr>
@@ -154,11 +138,7 @@
 							</tbody>
 						</table>
 					</div>
-					                	
-                	
-                	
-                	
-                	
+					
                 </div>
                 <div class="panel-footer"></div>
             </div>
