--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -33,7 +33,7 @@
 	</div>
 </div>
 
-<div class="table-responsive" style="padding: 0;">
+<div class="table-responsive" style="padding: 0; min-height: 223px;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
