--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -61,9 +61,8 @@
 			   					   
 								   <div class="pull-right">
 								   	     <!-- งานว่างมี {{ noOwnerCount | number:0 }} เคส&nbsp;&nbsp; -->
-								   	        แก้ใขข้อมูล/จ่ายงาน (Excel Upload)
 									   <input type="file" class="form-control" name="assign" id="assign"
-											  style="width: 180px;" nv-file-select="" uploader="uploader"
+											  style="width: 180px;" nv-file-select="" uploader="uploader" title="แก้ใขข้อมูล/จ่ายงาน"
 											  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
 											  
 									  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
