--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -286,7 +286,7 @@
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['address'] }}</td>
 									
-									<td style="vertical-align: middle;">{{ data['createdByName'] }}</td>
+									<td style="vertical-align: middle; white-space: nowrap;">{{ data['createdByName'] }}</td>
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
