--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -130,3 +130,8 @@ background-color: #eee;
     background: #000;
 }
 
+.scrollbar-success::-webkit-scrollbar-thumb {
+    background: #95D195;
+    -webkit-border-radius: 2ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
