--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -1,8 +1,8 @@
 
-<div class="panel panel-info" style="margin: 0;">
+<div class="panel panel-success" style="margin: 0;">
 	<div class="panel-heading">
 		<form class="form-inline" ng-submit="searchBtn('detail')">
-		  <div class="row">
+		  <div class="row" style="color: black;">
 		  	<div class="col-xs-12">
 			  <div class="form-group input-group">
 			  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -47,16 +47,16 @@
 					</div>
 					
 					&nbsp;&nbsp;
-				   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm(false, 'detail')">{{'user.search.clear_btn' | translate}}</button>
-				   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+				   <button type="button" class="btn btn-outline btn-success" ng-click="clearSearchForm(false, 'detail')">{{'user.search.clear_btn' | translate}}</button>
+				   <button type="submit" class="btn btn-outline btn-success">ค้นหา</button>
 			  </div>
 		  </div>
 		  
 		</form>
 	</div>		
 	
-	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
-		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+	<div class="alert alert-success form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: black;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
 		</span>
 		<pagination ng-change="pageChanged()" total-items="totalItems"
@@ -67,40 +67,40 @@
 					ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
 					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
-		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: black;">
 			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="searchBtn('detail')"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
 
-<div class="table-responsive" style="padding: 0;">
+<div class="table-responsive collapse table-success scrollbar-success" style="padding: 0;" id="collapseAccList">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr>
-				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+				<th style="white-space: nowrap; text-align: center; color: black;">#</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_traceDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+					<a href="" ng-click="columnOrder('sys_traceDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
 						วันที่ติดตาม&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_traceDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_traceDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_nextTimeDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+					<a href="" ng-click="columnOrder('sys_nextTimeDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
 						วันนัด Call&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_appointDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+					<a href="" ng-click="columnOrder('sys_appointDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
 						วันนัดชำระ&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder(h.columnName, 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+					<a href="" ng-click="columnOrder(h.columnName, 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
 						{{ h.columnNameAlias || h.columnName }}&nbsp;
 						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
@@ -110,17 +110,17 @@
 		<thead>
 		<!-- <tbody class="noselect"> -->
 		<tbody>
-			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer; color: #337AB7;"
+			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer;"
 				ng-class="{'': data['sys_compareDateStatus'] == 0, 'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">
 					<i class="fa fa-hand-o-right" ng-show="data.id == idActive"></i>
 						{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 					<i class="fa fa-hand-o-left" ng-show="data.id == idActive"></i>
 				</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_traceDate'] | date:gb_dateFormat }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:gb_dateFormat }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:gb_dateFormat }}</td>
-				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_traceDate'] | date:gb_dateFormat }}</td>
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_nextTimeDate'] | date:gb_dateFormat }}</td>
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_appointDate'] | date:gb_dateFormat }}</td>
+				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap; color: black;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
 					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
