--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -73,7 +73,7 @@
 	</table>
 </div>
 
-<div class="panel panel-green" style="margin-top: 3px; margin-bottom: 0;">
+<div class="panel panel-info" style="margin-top: 3px; margin-bottom: 0;">
 	<div class="panel-heading">
 		<a href="#" e-class="form-control" style="color: black;" e-style="width: 100%;" buttons="no" onaftersave="askModalObj.updateComment(askModalObj.comment)" editable-text="askModalObj.comment"> 
 			{{ askModalObj.comment || 'บันทึกเพิ่มเติม'}} 
