--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -95,11 +95,11 @@
 .collapse	    Hides the content
 .collapse in	Shows the content 
 -->
-<div class="collapse" id="collapseAccList">
-	<div class="row" style="margin-top: 3px; min-height: 325px;">
+<!-- <div class="collapse" id="collapseAccList"> -->
+	<div class="row" style="margin-top: 3px;">
 		<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
 	</div>
-</div>
+<!-- </div> -->
 
 <div class="row collapse in" id="collapseActionPanel">
 	<div class="col-lg-12">
@@ -109,10 +109,10 @@
 		
 		&nbsp;&nbsp;&nbsp;
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-success btn-outline" title="ก่อนหน้า" style="padding: 5px 13px 5px 5px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
+		  <button type="button" class="btn btn-primary btn-outline" title="ก่อนหน้า" style="padding: 5px 13px 5px 5px;" ng-click="nextPrev(false, true)" ng-disabled="firstTaskDetailId == idActive">
 		  	<i class="fa fa-hand-o-left fa-1x"></i>
 		  </button>
-		  <button type="button" class="btn btn-success btn-outline" title="ถัดไป" style="padding: 5px 5px 5px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
+		  <button type="button" class="btn btn-primary btn-outline" title="ถัดไป" style="padding: 5px 5px 5px 13px;" ng-click="nextPrev(true, true)" ng-disabled="lastTaskDetailId == idActive">
 		  	<i class="fa fa-hand-o-right fa-1x"></i>
 		  </button>
 		</div>
@@ -156,11 +156,11 @@
 
 <!-- Modal -->
 <div class="trace">
-	 <div class="modal fade" id="myModal_ask" tabindex="-1" role="dialog">
+	 <div class="modal fade" id="myModal_ask" tabindex="-1" role="dialog" style="cursor: move;">
 	     <div class="modal-dialog">
 	     	<form name="saveAskModalForm" ng-submit="askModalObj.askModalSave()" novalidate>
 	         <div class="modal-content">
-	         	<div class="modal-header" style="cursor: move;">
+	         	<div class="modal-header">
 	                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
 	                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
 	            </div>
@@ -303,6 +303,7 @@
 					</div>
 	            </div>
 	           	<div class="modal-footer">
+	           		<button type="button" class="btn btn-warning pull-left" ng-click="keepData()">ปิด โดยไม่ล้างข้อมูล</button>
 					<button type="button" class="btn btn-default" ng-click="dismissModalAsk()">ปิด</button>
 					<button type="submit" class="btn btn-primary" ng-disabled="!askModalObj.trace.resultText || isOutOfWorkingTime">บันทึก</button>
 				</div>
