--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -21,7 +21,7 @@
 	    transform: translate(-50%, -50%); */
 	} 
 </style>
-
+<div id="taskDetailStick" style="z-index: 10; background-color: #FFFFFF">
 <div class="row">
 	<div class="col-lg-12">
 		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
@@ -46,7 +46,7 @@
 	</div>
 </div>	
 
-<div class="row" id="taskDetailStick" style="z-index: 10;">
+<div class="row">
 	<div class="col-xs-12">
 		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
@@ -89,6 +89,7 @@
 			<div style="clear: both;"></div>
 		</div>
 	</div>
+</div>
 </div>
 
 <!-- 
