--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -11,7 +11,7 @@
 				<span class="input-group-addon">วัน</span>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="form-group" ng-show="group0">
 	        <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
 	        <label class="radio-inline">
 	            <input type="radio" name="enabled" value="1" ng-checked="data.enabled == 1" ng-model="data.enabled">{{'user.addpage.status.enable' | translate}}
