--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -450,7 +450,7 @@
 					</div>
 	            </div>
 	           	<div class="modal-footer">
-					<button type="button" class="btn btn-default" ng-click="proceedImport()" ng-disabled="importChkForm.$invalid">Import</button>
+					<button type="button" class="btn btn-default" ng-click="proceedImport()" ng-disabled="importChkForm.$invalid">Update</button>
 				</div>
 	         </div>
 	     </div>
