--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -9,11 +9,11 @@
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName">
 		  </div>
-		  <div class="form-group" ng-show="group0 || group5">
+		  <!-- <div class="form-group" ng-show="group0 || group5">
 			<select name="products" class="form-control" ng-model="$parent.formData.product" ng-options="option.id as option.productName for option in productsSelect" ng-change="search()">
 				<option value="">---ทั้งหมด---</option>
 		  	</select>
-		  </div>
+		  </div> -->
 		  <div class="form-group">
 			<select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
 				<option value="">---{{'user.addpage.dropdown_role_msg' | translate}}---</option>
