--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -45,10 +45,10 @@
 			                    <br />
 			                    
 			                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
-			                       editable-text="item.dataType"><small>{{ item.dataType }}</small></a><br />
+			                       editable-text="item.dataType"><small>{{ item.dataType || '-' }}</small></a><br />
 			                       
 			                    <a href="#" e-class="form-control input-sm" title="Column Name" e-required e-placeholder="Column Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
-			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
+			                       editable-text="item.columnName"><small>{{ item.columnName || '-' }}</small></a><br />
 			                       
 			                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
