--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -160,9 +160,9 @@
 									   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 									   
-									   <button type="button" class="btn btn-outline btn-primary pull-right" ng-show="group0" title="ใช้ update ข้อมูลในกรณีที่ import ผลการติดตาม" ng-click="updateTaskDetail()">
+									   <!-- <button type="button" class="btn btn-outline btn-primary pull-right" ng-show="group0" title="ใช้ update ข้อมูลในกรณีที่ import ผลการติดตาม" ng-click="updateTaskDetail()">
 									   	Update taskDetail
-									   </button>
+									   </button> -->
 									</div>  
 								</div>
 							
