--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -109,7 +109,7 @@
 												<button type="button" class="btn btn-primary" ng-click="search('enable')">Enable</button>
 											  	<button type="button" class="btn btn-primary" ng-click="search('disable')">Disable</button>
 											  	<button type="button" class="btn btn-primary" ng-click="search('remove')">Remove</button>
-											  	<button type="button" class="btn btn-primary" ng-click="exportByCriteria()">Export</button>
+											  	<button type="button" class="btn btn-primary" ng-click="exportTemplate()">Export</button>
 											</div>
 								   	  		<button class="btn btn-outline btn-primary" type="button" ng-disabled="selectedItems.length == 0" ng-click="showSelectedList()">Selected List <span class="badge" style="background-color: #EC971F; color: white;">{{ selectedItems.length }}</span></button>
 								   	  </div>
@@ -455,5 +455,32 @@
 	         </div>
 	     </div>
      </form>
+ </div>
+<!-- / Modal -->
+
+<!-- Modal -->
+ <div class="modal fade" id="templateNameModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="templateNamedismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">แบบฟอร์ม Notice</h4>
+            </div>
+            <div class="modal-body">            	    	
+				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+				  <div class="panel-body">
+				  	<div class="row" ng-repeat="file in templateExportFiles"> 
+				  		<div style="text-align: center;" class="col-lg-12">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="exportByCriteriaButton(file.id)">{{ file.templateName }}</button>
+				  		</div>
+				  	</div>
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+				<button type="button" class="btn btn-default" ng-click="templateNamedismissModal()">ปิด</button>
+			</div>
+         </div>
+     </div>
  </div>
 <!-- / Modal -->
