--- a/backend/src/main/webapp/app/views/notice_xdoc/main.html
+++ b/backend/src/main/webapp/app/views/notice_xdoc/main.html
@@ -94,7 +94,7 @@
 						<div class="col-lg-6">
 							<input type="file" class="form-control pull-left"
 								style="width: 300px;" nv-file-select="" uploader="uploader"
-								accept=".odt" />
+								accept=".odt,.docx" />
 						</div>
 					</div>
 				</div>
