--- a/backend/src/main/webapp/app/views/batch_notice/main.html
+++ b/backend/src/main/webapp/app/views/batch_notice/main.html
@@ -54,7 +54,7 @@
 					                   </td>
 					                   <td nowrap>
 					                       <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
-					                           <span class="glyphicon glyphicon-upload"></span> Convert
+					                           <span class="glyphicon glyphicon-upload"></span> Generate
 					                       </button>
 					                       <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
 					                           <span class="glyphicon glyphicon-ban-circle"></span> Cancel
@@ -75,7 +75,8 @@
 					           </div>
 					           <div class="row">
 						            <div class="col-lg-12">
-						            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader" />	  
+						            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader"
+						            	accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
 						            </div>
 					            </div>
 					         </div>
