--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="panel-body" style="padding: 3px;">
 
-			<div class="panel panel-info" style="margin: 0;">
+			<div class="panel panel-info" style="margin: 0;" ng-show="group0">
 				<div class="panel-heading" nv-file-drop="" uploader="uploader">
 		
 
@@ -144,12 +144,12 @@
 						</td>
 						<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 						<td>
-							<i class="fa fa-lg user-action-icon-primary" ng-class="{'fa-check-circle': data.isDateInput, 'fa-circle': !data.isDateInput}" ng-click="updateDateInput(data)"></i>
+							<i class="fa fa-lg user-action-icon-primary" ng-class="{'fa-check-circle': data.isDateInput, 'fa-circle': !data.isDateInput}" ng-click="updateDateInput(data)" ng-show="group0"></i>
 						</td>
 						<td>
-							<i title="ลบ" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
+							<i title="ลบ" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)" ng-show="group0"></i>&emsp; 
 							<i title="สถานะ" class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)"></i>&emsp; 
-							<i title="download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>
+							<i title="download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)" ng-show="group0"></i>
 						</td>
 					</tr>
 				</tbody>
