--- a/backend/src/main/webapp/app/views/batch_notice/main.html
+++ b/backend/src/main/webapp/app/views/batch_notice/main.html
@@ -21,7 +21,7 @@
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
 	            
 	            
                 	<div class="panel panel-info" style="margin: 0;">
@@ -74,16 +74,62 @@
 					               </div>
 					           </div>
 					           <div class="row">
-						            <div class="col-lg-12">
-						            	<input type="file" class="form-control pull-right" style="width: 300px;" nv-file-select="" uploader="uploader"
+					           		<div class="col-lg-6"></div>
+						            <div class="col-lg-6">
+						            	<input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader"
 						            	accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
 						            </div>
 					            </div>
 					         </div>
 						</div>	
+						
+						
+						<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;"> 
+								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}}) 
+							</span>
+							<pagination ng-change="pageChanged()" total-items="totalItems"
+								first-text="{{'pagination.first' | translate}}"
+								previous-text="{{'pagination.previous' | translate}}"
+								next-text="{{'pagination.next' | translate}}"
+								last-text="{{'pagination.last' | translate}}"
+								ng-model="formData.currentPage"
+								items-per-page="formData.itemsPerPage" max-size="maxSize"
+								class="pagination-sm pull-right" boundary-links="true"
+								rotate="false" num-pages="numPages" style="margin: auto;" />
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option"
+										ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}
+							</span>
+						</div>
+						
 					</div>
-
-	
+					
+					
+					<div class="table-responsive">
+						<table class="table table-striped table-hover" style="margin: 0;">
+							<thead>
+								<tr style="color: #337AB7;">
+									<th width="5%">#</th>
+									<th width="60%">ชื่อไฟล์</th>
+									<th width="10%">Total</th>
+									<th width="15%">วันที่นำเข้า</th>
+									<th width="10%"></th>
+								</tr>
+							<thead>
+							<tbody>
+								<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
+									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td>{{ data.fileName }}</td>
+									<td>{{ data.rowNum | number:0 }}</td>		
+									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
+									<td>
+										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
                 	
                 	
                 </div>
