--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -71,10 +71,10 @@
 									  <div class="pull-right" ng-show="group2">
 									  
 									  	  <!-- Notice -->
-									  	  <span class="pull-right" ng-show="isDisableNoticePrint && group1">
+									  	  <!-- <span class="pull-right" ng-show="isDisableNoticePrint && group1">
 				                           	&nbsp;|
 										    <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()">Print Notice</button>
-				                          </span>
+				                          </span> -->
 				                          
 									  	  <div class="dropdown pull-right">
 										      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
