--- a/backend/src/main/webapp/app/views/contact_us/main.html
+++ b/backend/src/main/webapp/app/views/contact_us/main.html
@@ -28,6 +28,7 @@
 									<textarea class="form-control" placeholder="Detail" style="resize: vertical; min-height: 150px;" ng-model="formData.detail"></textarea>
 								</div>
 		                        <div class="form-group" style="text-align: center;">
+		                        	<button class="btn btn-warning" type="button" ui-sref="dashboard.paymentToUs" ng-show="group1 || group5">การชำระเงิน</button>
 									<button class="btn btn-primary" type="button" ng-click="sent()">&nbsp;&nbsp;SEND&nbsp;&nbsp;</button>
 								</div>
 	                        </div>
