--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -7,10 +7,9 @@
 
    <div class="row">
        <div class="col-lg-12">
-       
            <div class="row">
 			<div class="col-lg-4">
-				<div class="panel panel-green">
+				<div class="panel panel-primary">
 				
 					<div class="panel-heading">
                     	<label>เลขที่บัญชีของผู้ชำระ</label>
@@ -35,8 +34,77 @@
 	                    </div>
                    </div>
                    <div class="panel-footer">
-                   		ข้อมูลเลขที่บัญชี ทางบริษัทจะใช้ในการอ้างอิงการชำระเงิน
+                   	<small>
+                   		<i>**เลขที่บัญชีของผู้ชำระ ทางบริษัทจะใช้ในการระบุตัวตนของลูกค้า*</i>
+                   	</small>
                    </div>
+                </div>
+			</div>
+			
+			<div class="col-lg-8">
+				<div class="panel panel-primary">
+				
+					<div class="panel-heading">
+                    	<label>ข้อมูลทางบัญชีของบริษัท METACOM Co.,Ltd.</label>
+                    </div>
+					<div class="panel-body">
+	                    <div class="well well-sm" style="margin-bottom: 0;">
+	                        <div class="form-horizontal">
+	                        	<div class="row">
+			                        <div class="col-lg-4">
+										<img id="photo" class="img-thumbnail" ng-src="{{ bankIcon }}">
+									</div>
+									<div class="col-lg-8">		
+										<div class="form-group" >
+											<label class="col-lg-4 control-label">ชื่อบัญชี</label>
+											<span class="form-control" style="color: #337AB7;">บริษัท เมตาคอม จำกัด</span>
+										</div>						
+										<div class="form-group" >
+											<label class="col-lg-4 control-label">สาขา</label>
+											<span class="form-control" style="color: #337AB7;">สยามพารากอน</span>
+										</div>						
+										<div class="form-group" >
+											<label class="col-lg-4 control-label">ประเภทบัญชี</label>
+											<span class="form-control" style="color: #337AB7;">ออมทรัพย์</span>
+										</div>						
+										<div class="form-group" >
+											<label class="col-lg-4 control-label">เลขที่บัญชี</label>
+											<span class="form-control" style="color: #337AB7;">218-243631-5</span>
+										</div>						
+									</div>
+	                        	</div>
+	                        </div>
+	                    </div>
+	                    <div class="row">
+		                    <div class="col-lg-6">
+		                    	<label style="margin-top: 3px;">การหัก ณ ที่จ่าย</label>
+		                    </div>
+		                    <div class="col-lg-6">
+		                    	<label style="margin-top: 3px;">การจัดส่งเอกสาร</label>
+		                    </div>
+	                    </div>
+	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
+		                    <div class="row">
+			                    <div class="col-lg-6">
+			                    	<div style="color: #337AB7;">
+				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด</span><br />
+				                    	<span>เลขประจำตัวผู้เสียภาษี: 0105551028207</span><br />
+				                    	<span>เลขที่ 47/171 หมู่ที่ 5 ซอยประชาอุทิศ 98 ถนนประชาอุทิศ-คู่สร้าง แขวง</span><br />
+				                    	<span>ทุ่งครุ เขตทุ่งครุ กรุงเทพมหานคร 10140</span>
+			                    	</div>
+			                    </div>
+			                    <div class="col-lg-6">
+			                    	<div style="color: #337AB7;">
+				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด (Support Center)</span><br />
+				                    	<span>ชั้น 29, อาคาร The Offices at Central World</span><br />
+				                    	<span>999/9 ถนนพระราม 1 แขวงปทุมวัน เขตปทุมวัน</span><br />
+				                    	<span>กรุงเทพฯ 10330</span>
+			                    	</div>
+			                    </div>
+		                    </div>
+	                    </div>
+                   </div>
+                   <div class="panel-footer"></div>
                 </div>
 			</div>
 		</div>
