--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -16,7 +16,7 @@
    <div class="row">
        <div class="col-xs-12">
            <div class="row">
-			<div class="col-xs-5">
+			<div class="col-xs-6">
 				<div class="panel panel-primary">
 				
 					<div class="panel-heading">
@@ -57,25 +57,20 @@
 	                    </div>
 	                    <div class="row"></div>
 	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
-	                    	<label style="margin-top: 3px;"><u>Email</u></label>
-		                    <div class="row">
-			                    <div class="col-xs-6">
-			                    	<div style="color: #337AB7;" class="addr_cus">
-				                    	<a href="#" e-class="form-control input-sm" e-style="width: 100%;" buttons="no" onaftersave="updateCusCompanyEmail()"
-			                       		   editable-text="customerEmail">{{ customerEmail || 'เพิ่ม Email บริษัท' }}</a>
-			                    	</div>
-			                    </div>
-		                    </div>
+	                    	<label style="margin-top: 3px;"><u>อีเมล์</u></label>
+	                    	<span style="color: #337AB7;">
+		                    	<a href="#" e-class="form-control input-sm" buttons="no" onaftersave="updateCusCompanyEmail()"
+	                       		   editable-text="customerEmail">{{ customerEmail || 'เพิ่ม อีเมล์ บริษัท' }}</a>
+	                    	</span>
 	                    </div>
-	                    <div class="row">&nbsp;</div>
-                    	<div class="col-xs-12">
-	                    	<div class="col-xs-6">
-		                    	<label style="margin-top: 3px;"><u>การออกใบกำกับภาษี</u></label>
+                    	<div class="row">
+		                    <div class="col-xs-6">
+		                    	<label style="margin-top: 3px;">การออกใบกำกับภาษี</label>
 		                    </div>
 		                    <div class="col-xs-6">
-		                    	<label style="margin-top: 3px;"><u>ที่อยู่ส่งเอกสาร</u></label>
+		                    	<label style="margin-top: 3px;">ที่อยู่ส่งเอกสาร</label>
 		                    </div>
-                    	</div>
+	                    </div>
 	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
 		                    <div class="row">
 			                    <div class="col-xs-6">
@@ -93,7 +88,7 @@
 		                    </div>
 	                    </div>
 	                    <div class="row">
-	                    	<div class="col-xs-6 col-xs-offset-3">
+	                    	<div class="col-xs-12 col-xs-offset-4">
 		                    	<code>วิธีบันทึก (Ctrl + Enter)</code>
 	                    	</div>
 	                    </div>
@@ -106,7 +101,7 @@
                 </div>
 			</div>
 			
-			<div class="col-xs-7">
+			<div class="col-xs-6">
 				<div class="panel panel-primary">
 				
 					<div class="panel-heading">
@@ -140,6 +135,13 @@
 	                        	</div>
 	                        </div>
 	                    </div>
+	                    
+	                    <div class="row">&nbsp;</div>
+	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
+	                    	<label style="margin-top: 3px;"><u>อีเมล์</u></label>
+		                    <span>mayfender.debt@gmail.com</span>
+	                    </div>
+	                    
 	                    <div class="row">
 		                    <div class="col-xs-6">
 		                    	<label style="margin-top: 3px;">การหัก ณ ที่จ่าย</label>
