--- a/backend/src/main/webapp/app/views/manage_notice/main.html
+++ b/backend/src/main/webapp/app/views/manage_notice/main.html
@@ -48,8 +48,9 @@
 									  &nbsp;&nbsp;
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
-									  <button type="button" class="btn btn-outline btn-primary" ng-click="printBatchNotice()">พิมพ์</button>
-									  
+									  <div class="pull-right">
+									  	<button type="button" class="btn btn-outline btn-primary" ng-click="printBatchNotice()">พิมพ์</button>
+									  </div>
 									</div>
 								</div>
 							</form>
